# mlops-quickstart

./: .dockerignore  .env.example  .gitignore  .python-version  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  env.example  pyproject.toml  requirements.txt
.github/workflows/: deploy-cloudrun.yml  test.yml
src/: app.py  logging_util.py  model.py
tests/: test_app.py  test_logging_util.py  test_model.py
