[project]
name = "mlops-quickstart"
version = "0.1.0"
description = "Minimal MLOps demo: a Dockerized FastAPI inference service with CI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.95.0",
  "uvicorn[standard]>=0.22.0",
  "scikit-learn>=1.2",
]

[dependency-groups]
dev = [
  "pytest>=7.0",
  "httpx>=0.24",
  "ruff>=0.5.0",
  "mypy>=1.8",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[[tool.mypy.overrides]]
module = [
  "sklearn.datasets",
  "sklearn.pipeline",
  "sklearn.preprocessing",
  "sklearn.linear_model",
]
ignore_missing_imports = true
